--- a/Appunti/Lab09_Parte02.ipynb
+++ b/Appunti/Lab09_Parte02.ipynb
@@ -25198,7 +25198,7 @@
     "\n",
     "- <span style=\"background-color: #00FFFF\">Even if the noisy best response dynamics falls in the global maximum configuration (all zeros), still it will escape from this configuration, for any value of $\\eta$, because the dynamics is ergodic.<span style=\"background-color: #00FFFF\"> This is a crucial observation, which distinguishes the noisy best response from the best response.\n",
     "\n",
-    "- <span style=\"background-color: #00FFFF\">Also the 'all ones' configuration is a Nash equilibrium, and thus a local maximum of the potential. If $\\eta$ is large and the system falls in the local maximum, it takes a lot to escape this configuration. This is due to the fact that the dynamics becomes \"less ergodic\" as $\\eta$ grows large, in the sense that it takes a lot to escape from Nash equilibria, and in general it takes a lot to descend the potential, because the players become more rational as $\\eta$ grows.</span>\n",
+    "- <span style=\"background-color: #00FFFF\">Also the 'all ones' configuration is a Nash equilibrium, and thus a local maximum of the potential. If $\\eta$ is large and the system falls in the local maximum, it takes a lot to escape this configuration. This is due to the fact that the dynamics becomes \"less ergodic\" as $\\eta$ grows large, in the sense that it takes a lot to escape from Nash equilibria, and in general it takes a lot to descend the potential, because the players become more rational as $\\eta$ grows: they will accept with small probability transitions that make their payoff decrease.</span>\n",
     "\n",
     "- <span style=\"background-color: #00FFFF\">In mathematical terms, this statement may be rephrased as follows: \"as $\\eta$ grows large, the invariant distribution of the dynamics tends to concentrate most of the mass on the maximizers of the potential, but it takes more time to relax to the invariant distribution.\" This is also related to the fact that the transition graphs becomes less connected as $\\eta$ grows (because the probability of an agent choosing a suboptimal strategy tends to $0$).</span>\n",
     "    \n",
@@ -27273,6 +27273,13 @@
     "    print()\n",
     "\n",
     "plt.step(transition_times, potentials, 'bo-', where=\"post\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that, since we used larger $\\eta = 10$, the interval between transitions becomes very large when the system is at maximum potential."
    ]
   },
   {
@@ -32713,9 +32720,29 @@
    "source": [
     "## <span style=\"background-color: #00FFFF\">On the difference between BR and NBR (in potential games)</span>\n",
     "\n",
-    "- The NBR dynamics is irreducible, the BR is not (transitions are allowed only in the increasing direction of the potential).\n",
-    "- The NBR dynamics admits a unique invariant distribution. The BR converges almost surely to the set of sink components of Nash equilibria (called recurrent equilibria, and indicated by $\\mathcal{N}_\\infty$). However, $\\mathcal{N}_\\infty$ may in general contain multiple disconnected sets of Nash equilibria, and which one is selected depends on the initial condition and on the realization of the Markov process.\n",
-    "- As $\\eta \\to \\infty$, the NBR dynamics for long times condensate its probability distribution to the global maximizers of the potential $\\Phi$. However, $\\mathcal{N}_\\infty$ does not in general coincide with the global maximizers of the potential. The only property that can be proven is that $\\mathcal{N}_\\infty$ contains the global maxima of $\\Phi$."
+    "### Irreducibility\n",
+    "\n",
+    "- The NBR dynamics is irreducible, even in the small noise limit $\\eta \\to +\\infty$.\n",
+    "- The BR is not irreducible. Transitions are allowed only if the potential does not decrease along the trajectory.\n",
+    "\n",
+    "### Invariant distribution\n",
+    "- As a consequence of its irreducibility, the NBR dynamics admits a unique invariant distribution whose is support is the whole space of configurations $\\mathcal{X}$. The invariant distribution is\n",
+    "\n",
+    "$$\n",
+    "\\pi_x = \\frac{e^{\\eta \\Phi(x)}}{Z_\\eta}, \\quad Z_\\eta = \\sum_{y\\in \\mathcal{X}} e^{\\eta \\Phi(y)}.\n",
+    "\\tag{1}\n",
+    "$$\n",
+    "\n",
+    "- The BR converges almost surely in finite time to a sink component of Nash equilibria (called recurrent equilibria, indicated by $\\mathcal{N}_\\infty$). However, $\\mathcal{N}_\\infty$ may in general contain multiple disconnected sets of Nash equilibria, and which one is selected depends on the initial condition and on the realization of the Markov process. Thus, the BR dynamics may admit multiple invariant distributions, all of them having support on $\\mathcal{N}_\\infty$.\n",
+    "\n",
+    "### Nash equilibria selection\n",
+    "- As $\\eta \\to +\\infty$, the invariant distribution of the NBR dynamics tends to a uniform probability distribution over $\\text{argmax} \\ \\Phi$, i.e., for large times the NBR dynamics spends a fraction 1 of the total time in global maximizers of the potential. (The NBR dynamics for long times condensate its probability distribution to the global maximizers of the potential $\\Phi$).\n",
+    "\n",
+    "- For large times, the BR dynamics spends a fraction 1 of the total time in $\\mathcal{N}_\\infty$ (in which recurrent equilibria depends on the initial condition and on the realization of the dynamics). \n",
+    "\n",
+    "- However, in general $\\mathcal{N}_\\infty \\neq \\text{argmax} \\ \\Phi$. The only property that can be proven is that $\\text{argmax} \\ \\Phi \\subseteq \\mathcal{N}_\\infty$. \n",
+    "\n",
+    "**Take-home message**: the noisy best reponse with $\\eta \\to +\\infty$ selects a subset of the equilibria selected by the BR dynamics. But the notion of \"selecting an equilibrium\" depends on the considered dynamics, in the sense that the BR dynamics gets trapped in $\\mathcal{N}_\\infty$, while the NBR spends almost of the time in the maximizers of the potential, but can leave the set of the equilibria because of its irreducibility."
    ]
   },
   {
